--- a/Project 1/Updated Calendar Template/calendar_report_template.Rmd
+++ b/Project 1/Updated Calendar Template/calendar_report_template.Rmd
@@ -39,7 +39,7 @@ You may add subheadings as desired to break up the report.
 # Data Wrangling <!-- (e.g., How do I spend my time?) -->
 
 <!--
-The code below is provided as a starting point for importing an `ics` file into R as a dataframe, doing some initial wrangling, and adding up the time spent on each activity. You are not required to use this code, so delete or modify it as you see fit. 
+The code below is provided as a starting point for importing an `ics` file into R as a data frame, doing some initial wrangling, and adding up the time spent on each activity. You are not required to use this code, so delete or modify it as you see fit. 
 
 If you are using the code, be sure to update the capitalized parts with the relevant path to where your `ics` file is located, and set `eval = TRUE`.
 
@@ -108,14 +108,16 @@ Describe your question(s) here.  Briefly describe your data collection process, 
 
 **Question 1:** *How much time do I spend on each course?* 
 
+
 I wanted to explore how much time I was spending on each class. Within this question, I had two aspects of interest. Looking solely at the class data in my calendar, I wanted to see how much total time was devote to each course and compare that data with the other classes. Secondly, I wanted to see the breakdown of each individual class. Within any given class, I wanted to know how much time I devoted to studying, actually attending the class, visiting office hours, and if applicable, how much time was spent attending SDS hours. 
 
-**Question 2:** *How do my times spent on each activity during those two weeks compare to one another?*
+**Question 2:** *How did my times spent on each activity during those two weeks compare to one another?*
+
 
 For my second question, I wanted to look at the time devoted to all major activities during my day. I wanted to explore any interesting trends over the two weeks of data collection. I was curious how much of my day I was devoting to school, exercise, self care, leisure, sleep, and paid work. 
 
 
-**Data Collection & Variables:**
+## Data Collection & Variables:
 
 Going into the project, I already had an idea for my visualizations and table. I inputted all of my data into one Google calendar. I knew that I wanted to see both the breakdown within my courses, as well as the overall course data. I decided to stay consistent with my naming of each activity, paying particular attention to the capitalization or format of the letters. For each of my four classes, I abbreviated the department in all capital letters (ex. Data Science $\rightarrow$ STAT). I took it one step further for the specific activity. The capitalized abbreviation would then be followed by an underscore and then the activity in all lowercase (ex. studying for Data Science $\rightarrow$ STAT_study). When I began coding my visualizations, I realized that I only had one variable. Since my class and work inputs were highly specified, I had to first create a new variable `overall` and collapse my class and work data into `class` and `work` to address my second question. In order to create my stacked bar chart, segmented by activities, I had to then create an `activity` variable by separating `class` by the underscore. Here is a short breakdown of my variables and the data within each variable:
 
@@ -152,13 +154,16 @@ Going into the project, I already had an idea for my visualizations and table. I
 Describe what information is conveyed through data visualization #1 (that you'll create below) here.
 -->
 
-#Results 
+
+# Results 
+
 
 ## Visualization 1: Breakdown of Total Time (Hrs) Per Class
 
 ### Discussion:
 
   The most noticeable thing about this visualization is just how little time was spent on my Culture and Mental Health class compared to the other three. This Hampshire College course is scheduled to meet on Tuesday and Thursday for an hour and twenty minutes each day. By absolute coincidence during these two weeks of data collection, both September 16th and September 23rd were cancelled for Yom Kippur and Hampshire Advising Day, respectively. 
+  
   The distributions for my other three courses were similar and what I would have expected to observe. `ASLC` and `ENST` are both roughly three-hour seminars that meet once a week, so that class time should be greater than `STAT`. Additionally, this data shows me that I could, and should, be utilizing office hours more to reduce the overall time I spend studying. During those 16 days (384 hours), I only attended office and SDS hours a total of about two hours across those three classes. Contrary to the matter, I spent between 10 and 12 hours per class studying. Instead of struggling through problem sets, readings, and papers on my own, I would like to attend more office hours in the future.
   
 ### Code and Output:  
@@ -169,11 +174,12 @@ Describe what information is conveyed through data visualization #1 (that you'll
 ggplot(data = class_data, aes(fill = activity, y = overall_time, x = class)) +
   #create a stacked segmented bar chart
   geom_bar(position = "stack", stat = "identity") +
-  #clean up the lables, add title
+  #clean up the labels, add title
   labs(title = "Time Devoted to Each Class",
        x = "Classes",
        y = "Total Time (hrs)"
        ) +
+  #add more breaks on the y axis
   scale_y_continuous(breaks = scales::pretty_breaks(n = 10))
 ```
 
@@ -185,8 +191,12 @@ Describe what information is conveyed through data visualization #2 (that you'll
 
 ### Discussion:
 
-  The most noticeable thing about this visualization is just how little time was spent on my Culture and Mental Health class compared to the other three. This Hampshire College course is scheduled to meet on Tuesday and Thursday for an hour and twenty minutes each day. By absolute coincidence during these two weeks of data collection, both September 16th and September 23rd were cancelled for Yom Kippur and Hampshire Advising Day, respectively. 
-  The distributions for my other three courses were similar and what I would have expected to observe. `ASLC` and `ENST` are both roughly three-hour seminars that meet once a week, so that class time should be greater than `STAT`. Additionally, this data shows me that I could, and should, be utilizing office hours more to reduce the overall time I spend studying. During those 16 days (384 hours), I only attended office and SDS hours a total of about two hours across those three classes. Contrary to the matter, I spent between 10 and 12 hours per class studying. Instead of struggling through problem sets, readings, and papers on my own, I would like to attend more office hours in the future.
+  Since I was tracking so many different activities, the graph is very cluttered and in particular regions, indiscernible. There are three major things that this graph describes. On average, I tend to get between seven and nine hours of sleep. However, on the night of September 20th, I had an overwhelming work load. I did work until three o'clock in the morning, but had a nine o'clock class at Hampshire College. Time spend on class (orange) increased from 3.5 hours the previous night to 5.5 hours. Since sleeping (purple) and being awake are mutually exclusive, my sleep significantly decreased from 9 hours to 4.5 hours. 
+  
+  The second major facet was `selfcare` and `leisure`. After the rigorous academic week, I made sure to spend the entire weekend healing. I walked around the art museum, took hikes in nature, journaled, meditated, and spent time with friends. My recorded self care on Saturday was 5.5 hours. I also noticed an interested day-by-day trend; when my class work increases, so does my leisure (green) time. I make a conscious effort to balance my workload with leisure. If I do school work for a few hours, I then reward myself with time to watch my favorite shows or to play video games that same day.
+  
+  The last thing that stood out to me was my inability to attend rugby (aqua) practice. Rugby is basically nonexistent on my graph. During the 16-day period, I was only able to attend two practices due to conflicts with other commitments. I was already considering quitting the team due to my lack of involvement, and this graph elucidated the fact that I simply do not have time for that particular activity. 
+  
   
 ### Code and Output:
 
@@ -198,7 +208,7 @@ ggplot(calendar_data, aes(x = date, y = time_hrs,
   geom_line() +
   #make the labels look like and convey accurate information
   labs(title = "Time Series Graph Over 2 Weeks",
-       subtitle = "Amount of Time Devote to Each Task Each Day",
+       subtitle = "Daily Allocation of Time to Each Activity",
        y = "Total Time (Hrs)",
        x = "Date (YYYY-MM-DD)",
        color = "Overall", lty = "Overall") +
@@ -206,7 +216,7 @@ ggplot(calendar_data, aes(x = date, y = time_hrs,
   scale_x_datetime(date_breaks = "1 days") +
   #Increase y labels (add 10 breaks)
   scale_y_continuous(breaks = scales::pretty_breaks(n = 10)) + 
-  #Rotates x axis labels 90 degrees for readability 
+  #Rotates x axis labels 90 degrees and size for readability 
   theme(axis.text.x = element_text(angle = 90, hjust = 1, size = rel(1)))
          
        
@@ -226,16 +236,22 @@ or
 * the xtable package
   https://cran.r-project.org/web/packages/xtable/vignettes/xtableGallery.pdf
 -->
+## Table 1: Overall Summary of Each Activity 
 
-## Table 1: Overall Summary of Each Activity (Hrs)
+### Discussion:
+
+  This table describes the average, minimum, maximum, and total hours devoted to each activity. `N` also indicates the number of times that activity was recorded in my calendar. Most of my time, undeniably, was spent sleeping. 
+  Due to the way I collected and wrangled my data, the average, minimum, and maximum hours fall short of conveying comparable data. These benchmarks are simply relative to the number of observations. For `sleep`, this table shows that whenever I inputted sleep data, it was for an average of 7.8 hours. On the other hand, `class` refers to any time input that was academic related. This includes times that I attended office hours for only 30 minutes, or if I had logged 40 minutes of work between classes. There were 37 recorded instances of anything school related. Even though my `Max` recorded `class` time In my opinion, the most important column in this table is `Total`. Aside from hours sleeping, I spent a significant amount of time doing anything academic related. Total `class` time was about 60 hours. I also participated in leisurely activity a lot when compared to other facets of my life. Excluding sleep, whenever I participated in a given activity, I devoted an average of about 1.5 hours to it.   
+  
+### Code and Output:  
 
 ```{r Table 1, results = 'asis'}
-# Create new dataframe from dataframe calendar_data
+# Create new data frame from data frame calendar_data
 table <- calendar_data %>% 
   # I am interested just in the overall data
   group_by(overall) %>% 
   #Renaming variable overall
-  rename(Category = overall) %>% 
+  rename(Activity = overall) %>% 
   summarize(
     N = n(),
     Average = mean(time_hrs),
@@ -246,10 +262,11 @@ table <- calendar_data %>%
   #arrange in descending order
   arrange(desc(Average)) %>% 
   #make aesthetically pleasing and change number of digits following decimal.
-  kable(booktabs = TRUE, digits = 1) %>% 
-  #center
-  kable_styling()
+  kable(booktabs = TRUE, digits = 1, caption = "Activity Summary Statistics (Hrs)") %>% 
+  #center and change font size
+  kable_styling(font_size = 15) 
 
+#output table
 table
 ```
 
