--- a/ps5/ps5.Rmd
+++ b/ps5/ps5.Rmd
@@ -85,7 +85,7 @@ If you worked with others or used resources outside of provided course material 
 
 Name(s) and corresponding problem(s)
 
-*
+* SDS fellow, Zack for problem 1 and 2
 
 *I used the following sources to help complete this assignment:*
 
@@ -146,9 +146,10 @@ scj <- html_table(tables[[2]], fill = TRUE) %>%
   #clean the names
   janitor::clean_names() 
 #create an object for outpath
-outpath <- "/Users/tpkt/Desktop/College2021-2022/Stats231/Personal Repo/Stat-231-KT/ps5/data"
+# outpath <- "/Users/tpkt/Desktop/College2021-2022/Stats231/Personal Repo/Stat-231-KT/ps5/data"
 #write the csv file pulling scj table and paste0 combines outpath with writecsv
-write_csv(scj, paste0(outpath, "/justices.csv"))
+# write_csv(scj, paste0(outpath, "/justices.csv"))
+write_csv(scj, "data/justices.csv")
 ```
 
 ## <!-- 1.2 -->Load "justices.csv" into this file using the `read_csv()` function. Then, modify the code below as needed and run the code to create the variable `tenure_length` (a numeric variable containing each justice's time spent on the bench). Create a visualization to show the distribution of tenure length of U.S. Supreme Court judges.  Interpret the plot.
@@ -157,7 +158,7 @@ write_csv(scj, paste0(outpath, "/justices.csv"))
 
 ```{r visualization, fig.width = 3.6, fig.height = 2.4, fig.align = "center"}
 
-justices <- read_csv(paste0(outpath, "/justices.csv"))
+justices <- read_csv("data/justices.csv")
 
 # Run after loading your justices.csv file
 justices <- justices %>%
@@ -247,15 +248,15 @@ funny_quotes <- tibble(person = people, quote = quotes) %>%
          # Prep quotes for markdown display when `results = "asis"`
          display = paste0('> *"', as.character(quote), '"* --' , as.character(person)))
 
-outpath <- "/Users/tpkt/Desktop/College2021-2022/Stats231/Personal Repo/Stat-231-KT/ps5/data"
-write_csv(funny_quotes, paste0(outpath, "/quotes.csv"))
-
+# outpath <- "/Users/tpkt/Desktop/College2021-2022/Stats231/Personal Repo/Stat-231-KT/ps5/data"
+# write_csv(funny_quotes, paste0(outpath, "/quotes.csv"))
+write_csv(funny_quotes, "data/quotes.csv")
 ```
 
 ## <!-- 2.2 -->Load "quotes.csv" into this file using the `read_csv()` function.  Write code to select *three* of the quotes at random and print them (i.e., set `n = 3` in the `slice_sample()` function).
 
 ```{r, results = "asis"}
-funny_quotes <- read_csv(paste0(outpath, "/quotes.csv"))
+funny_quotes <- read_csv("data/quotes.csv")
 
 slice_sample(funny_quotes, n = 3) %>% 
   pull(display) %>% 
